--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 <h1>FSW</h1>
             </div>
             <div class="about">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptas veritatis ea deserunt odit amet adipisci sit pariatur minima inventore commodi tenetur autem provident laborum dolores nihil ratione rem harum quisquam blanditiis, dicta quos laboriosam in tempore. Non omnis quis tempore! Illo, facere, laborum expedita cumque rerum possimus ea cum eius ratione, reprehenderit nostrum iure tempore delectus odio exercitationem impedit magnam? Repellat necessitatibus quod magnam quis nulla aperiam molestias ea suscipit blanditiis dignissimos voluptate sed architecto nam ipsa sit, deleniti vero beatae aut! Necessitatibus hic ea eum eveniet esse rem quisquam inventore quia harum ex. Ipsam libero quibusdam deserunt laborum sint aspernatur debitis, molestias, illum nam consectetur officiis, maxime et! Impedit quae excepturi nostrum aliquam non? Porro, suscipit fugiat? At, corporis error rerum repellat excepturi quidem quis eius reprehenderit exercitationem corrupti voluptates, odio repellendus reiciendis fugit dignissimos qui natus quaerat molestias! Ut officiis quo adipisci. Ipsum exercitationem voluptas sunt nostrum recusandae, beatae ut quidem aspernatur sit quas expedita dolorem facilis animi a. Id expedita quos est quo. Ad, tempora repellendus aspernatur doloribus ea nihil, veritatis rerum iste, fugiat sint cumque aliquam dolores consequatur odit expedita eum recusandae! Maxime adipisci excepturi iusto velit totam dignissimos ullam, suscipit soluta sunt commodi deserunt?
+                Free Software Wing (FSW) is a lively technical student body of GRIET. FSW-GRIET is on a mission to create profound awareness about Free and Open Source Softwares in the careers of students and faculty of GRIET. Our student body conducts interactive events, insightful seminars, hands-on workshops and many more programs as part of the awareness campaign for Free and Open Source Softwares. We provide participants and attendees of our events with valuable knowledge that can be leveraged to advance their technological pursuits.
             </div>
         </div>
         <h1>VIVITSU COMMUNITY</h1>
@@ -144,6 +144,26 @@
                     <div class="name">SRUJANA</div>
                     <div class="role">Creative Head</div>
                     <div class="year">3rd Year<span class="branch"></span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/22.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">UMESH</div>
+                    <div class="role">Marketing Team</div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
+                </div>
+            </div>
+            <div class="organiser">
+                <div class="profile">
+                    <img src="images/34.png" alt="">
+                </div>
+                <div class="details">
+                    <div class="name">VIJAY VARDHAN</div>
+                    <div class="role">Marketing Team</div>
+                    <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -328,16 +348,6 @@
             </div>
             <div class="organiser">
                 <div class="profile">
-                    <img src="images/22.png" alt="">
-                </div>
-                <div class="details">
-                    <div class="name">UMESH</div>
-                    <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch"></span></div>
-                </div>
-            </div>
-            <div class="organiser">
-                <div class="profile">
                     <img src="images/23.png" alt="">
                 </div>
                 <div class="details">
@@ -393,16 +403,6 @@
                 <div class="details">
                     <div class="name">ANNAPURNA</div>
                     <div class="role">Event Management</div>
-                    <div class="year">2nd Year<span class="branch"></span></div>
-                </div>
-            </div>
-            <div class="organiser">
-                <div class="profile">
-                    <img src="images/34.png" alt="">
-                </div>
-                <div class="details">
-                    <div class="name">VIJAY VARDHAN</div>
-                    <div class="role">Marketing Team</div>
                     <div class="year">2nd Year<span class="branch"></span></div>
                 </div>
             </div>
