--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
     
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 
-    
     <script defer src="viewerCount.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        updateViewerCount();
-      });
-    </script>
 </head>
 <body>
     <div id="loader">
@@ -357,8 +351,8 @@
             <ul>
                 <li><img src="images/monster_energy.png" alt="" style="background-color: black;"></li>
                 <li><img src="images/FTCCI.jpg" alt=""></li>
-                <li><img src="images/axis.jpg" alt=""></li>
                 <li><img src="images/" alt=""></li>
+                <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
             </ul>
         </div>
         <!-- <hr>  -->
@@ -572,7 +566,9 @@
                 <a href="./index.html#faqs">FAQs</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
                 <a href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5">Register</a>
-                <p>Current viewer count: <span id="viewer-count"></span></p>
+                <!-- <div>
+                    <p>Viewer Count: <span id="viewer-count">0</span></p>
+                </div> -->
                 </li>
             </ul>
             </div>
