--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                 <div class="details">
                     <div class="name">UMESH</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch"></span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
@@ -163,7 +163,7 @@
                 <div class="details">
                     <div class="name">VIJAY VARDHAN</div>
                     <div class="role">Marketing Team</div>
-                    <div class="year">2nd Year<span class="branch"></span></div>
+                    <div class="year">3rd Year<span class="branch"></span></div>
                 </div>
             </div>
             <div class="organiser">
