--- a/about.html
+++ b/about.html
@@ -18,17 +18,27 @@
     <div id="loader">
         <div class="spinner"></div>
     </div>
+    
     <header id="header">
-        <a href="#" class="logo">VIVITSU</a>
-        <div class="cursor"></div>
+        <!-- <a href="#" class="logo">VIVITSU</a> -->
+        <!-- <div class="cursor"></div> -->
+        <div class="fsw-logo">
+            <img src="images/fswLogo.png" alt="">
+        </div>
         <ul>
-            <li><a href="index.html" class="home">HOME</a></li>
-            <li><a href="about.html" class="about active">ABOUT US</a></li>
+            <li><a href="./index.html" class="home active">HOME</a></li>
+            <!-- <div class="home-cursor"></div> -->
+            <li><a href="about.html" class="about">ABOUT US</a></li>
+            <li><a href="#footer" class="home">CONTACT US</a></li>
+            <!-- <div class="about-cursor"></div> -->
             <li>
                 <a href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5"  class= "active headRegister" target="_blank">REGISTER</a>
                 <div class="register-cursor"></div>
             </li>
         </ul>
+        <div class="griet-logo">
+            <img src="images/grietLogo.png" alt="">
+        </div>
     </header>
     <section id="aboutUs">
         <div id="vivitsu">
@@ -408,6 +418,7 @@
             </div>
         </div>
     </section>
+    
     <footer id="footer">
         <!-- <svg class="footer-wave-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 100" preserveAspectRatio="none"> -->
         <!-- <path class="footer-wave-path" d="M851.8,100c125,0,288.3-45,348.2-64V0H0v44c3.7-1,7.3-1.9,11-2.9C80.7,22,151.7,10.8,223.5,6.3C276.7,2.9,330,4,383,9.8 c52.2,5.7,103.3,16.2,153.4,32.8C623.9,71.3,726.8,100,851.8,100z"></path> -->
@@ -441,28 +452,28 @@
             <h2 class="footer-menu-name"> Problem Statements</h2>
             <ul id="menu-company" class="footer-menu-list">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps1">Healthy Diet Application</a>
+                <a id="l1" href="./index.html#ps1">Healthy Diet Application</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps2">Travel Assistance Chatbot</a>
+                <a  id="l2" href="./index.html#ps2">Travel Assistance Chatbot</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps3">Language Learning Platform</a>
+                <a  id="l3" href="./index.html#ps3">Language Learning Platform</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps4">Gamification of Learning</a>
+                <a id="l4" href="./index.html#ps4">Gamification of Learning</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps5">Aggregator Application</a>
+                <a id="l5" href="./index.html#ps5">Aggregator Application</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps6">Fake Product Detection System</a>
+                <a  id="l6"href="./index.html#ps6">Fake Product Detection System</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps7">Network Scanning Tool</a>
+                <a  id="l7"href="./index.html#ps7">Network Scanning Tool</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps8">Student Innovation</a>
+                <a id="l8" href="./index.html#ps8">Student Innovation</a>
                 </li>
                 </li>
             </ul>
@@ -484,13 +495,13 @@
             <h2 class="footer-menu-name">Quick Links</h2>
             <ul id="menu-quick-links" class="footer-menu-list">
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                <a target="_blank" rel="noopener noreferrer" href="./index.html#problem-statements">Problem Statements</a>
+                    <a target="_blank" rel="noopener noreferrer" href="./index.html#problem-statements">Problem Statements</a>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                <a target="_blank" rel="noopener noreferrer" href="./index.html#highlights">Event Highlights</a>
+                    <a target="_blank" rel="noopener noreferrer" href="./index.html#highlights">Event Highlights</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#sponsors">Sponsors</a>
+                    <a href="./index.html#sponsors">Sponsors</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
                 <a href="./about.html">About Us</a>
@@ -499,6 +510,9 @@
                 <a href="./index.html#faqs">FAQs</a></li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
                 <a href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5">Register</a>
+                <!-- <div>
+                    <p>Viewer Count: <span id="viewer-count">0</span></p>
+                </div> -->
                 </li>
             </ul>
             </div>
@@ -531,12 +545,12 @@
                 <path class="footer-social-icon-path" d="M9,25H4V10h5V25z M6.501,8C5.118,8,4,6.879,4,5.499S5.12,3,6.501,3C7.879,3,9,4.121,9,5.499C9,6.879,7.879,8,6.501,8z M27,25h-4.807v-7.3c0-1.741-0.033-3.98-2.499-3.98c-2.503,0-2.888,1.896-2.888,3.854V25H12V9.989h4.614v2.051h0.065 c0.642-1.18,2.211-2.424,4.551-2.424c4.87,0,5.77,3.109,5.77,7.151C27,16.767,27,25,27,25z"></path>
             </svg>
             </a>
-            <a class="footer-social-link twitter" href="https://www.instagram.com/fsw_griet/">
+            <a class="footer-social-link twitter" href="https://www.instagram.com/fsw_griet/" target="_blank">
             <span class="hidden-link-text">Instagram</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
             <a class="footer-social-link mail" href="mailto:freesoftwarewinggriet.fsw@gmail.com">
-                <span class="hidden-link-text">Mail</span>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+            <span class="hidden-link-text">Mail</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
             </a>
             <a class="footer-social-link github" href="#">
             <span class="hidden-link-text">Github</span>
