--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer src="cursor.js"></script>
     <script defer src="dynamicText.js"></script>
     <script defer src="particle.js"></script>
-    <script src="flip.js"></script>
+    <script defer src="flip.js"></script>
     <!-- <script defer src="loader.js"></script> -->
     <!-- <link rel="stylesheet" href="card.css"> -->
     <link rel="stylesheet" href="footer.css">
@@ -25,7 +25,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="card.js"></script>
+    <script defer src="card.js"></script>
     
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
 
@@ -36,18 +36,25 @@
         <div class="spinner"></div>
     </div>
     <header id="header">
-        <a href="#" class="logo">VIVITSU</a>
-        <div class="cursor"></div>
+        <!-- <a href="#" class="logo">VIVITSU</a> -->
+        <!-- <div class="cursor"></div> -->
+        <div class="fsw-logo">
+            <img src="images/fswLogo.png" alt="">
+        </div>
         <ul>
-            <li><a href="#" class="home active">HOME</a></li>
+            <li><a href="./index.html" class="home active">HOME</a></li>
             <!-- <div class="home-cursor"></div> -->
             <li><a href="about.html" class="about">ABOUT US</a></li>
+            <li><a href="#footer" class="home">CONTACT US</a></li>
             <!-- <div class="about-cursor"></div> -->
             <li>
                 <a href="https://unstop.com/o/qTPjOK9?lb=2ZvsJH5"  class= "active headRegister" target="_blank">REGISTER</a>
                 <div class="register-cursor"></div>
             </li>
         </ul>
+        <div class="griet-logo">
+            <img src="images/grietLogo.png" alt="">
+        </div>
     </header>
     <section>
         <div id="main">
@@ -103,19 +110,23 @@
             <h1>EVENT HIGHLIGHTS</h1>
             <ul>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
                             <img class="thumbnail" src="./images/highlight1.png" alt="">
+                            
                           </div>
                           <div class="back">
                             <img class="thumbnail thumbnail-hover" src="./images/highlight1.png" alt="">
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>24 Hour Hackathon</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -126,9 +137,11 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Open Source Softwares</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -139,9 +152,11 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Food and WiFi</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -152,9 +167,11 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Hangout with friends</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -165,9 +182,11 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Increase Your Network</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -178,9 +197,11 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Music and Dance Performance</h3>
                 </li>
                 <li>
+                    <a href="./about.html">
                     <div class="flip">
                         <div class="flip-inner">
                           <div class="front">
@@ -191,6 +212,7 @@
                           </div>
                         </div>
                     </div>
+                    </a>
                     <h3>Fun Activites</h3>
                 </li>
                 <!-- <li>
@@ -216,6 +238,9 @@
                     <h3>Highlight-8</h3>
                 </li> -->
             </ul>
+        </div>
+        <div class="highlights-button">
+            <a href="./about.html">READ MORE</a>
         </div>
         <!-- <hr> -->
         <div id="problem-statements">
@@ -397,7 +422,7 @@
                 </div>
                 <div class="card-flap flap1">
                     <div class="card-description">
-                        Students can choose any one of the the following domain and can come up with there own idea each domian has one winner.
+                        Students can choose any one of the the following domain and can come up with there own idea each domain has one winner.
                     </div>
                 </div>
                 </div>        
@@ -443,9 +468,9 @@
                     <h2>ASSOCIATE SPONSORS</h2>
                     <ul>
                         <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
+                        <!-- <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
                         <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
-                        <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
-                        <li><img src="images/axis.png" alt="" style="background-color: white;"></li>
+                        <li><img src="images/axis.png" alt="" style="background-color: white;"></li> -->
                     </ul>
                 </div>
             </div>
@@ -603,28 +628,28 @@
             <h2 class="footer-menu-name"> Problem Statements</h2>
             <ul id="menu-company" class="footer-menu-list">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps1">Healthy Diet Application</a>
+                <a id="l1" href="./index.html#ps1">Healthy Diet Application</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps2">Travel Assistance Chatbot</a>
+                <a  id="l2" href="./index.html#ps2">Travel Assistance Chatbot</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps3">Language Learning Platform</a>
+                <a  id="l3" href="./index.html#ps3">Language Learning Platform</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps4">Gamification of Learning</a>
+                <a id="l4" href="./index.html#ps4">Gamification of Learning</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps5">Aggregator Application</a>
+                <a id="l5" href="./index.html#ps5">Aggregator Application</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps6">Fake Product Detection System</a>
+                <a  id="l6"href="./index.html#ps6">Fake Product Detection System</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps7">Network Scanning Tool</a>
+                <a  id="l7"href="./index.html#ps7">Network Scanning Tool</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                <a href="./index.html#ps8">Student Innovation</a>
+                <a id="l8" href="./index.html#ps8">Student Innovation</a>
                 </li>
                 </li>
             </ul>
