--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="particle.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="flip.css">
-    <!-- <link rel="stylesheet" href="loader.css"> -->
+    <link rel="stylesheet" href="loader.css">
     <script defer src="bubble.js"></script>
     <script defer src="faqs.js"></script>
     <script defer src="cursor.js"></script>
     <script defer src="dynamicText.js"></script>
     <script defer src="particle.js"></script>
     <script defer src="flip.js"></script>
-    <!-- <script defer src="loader.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="loader.js"></script>
     <!-- <link rel="stylesheet" href="card.css"> -->
     <link rel="stylesheet" href="footer.css">
     <!-- <link rel="stylesheet" href="cardsLess.less"> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="card.js"></script>
