--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="bubble x10"><img src="images/logo.png" alt="" width="60%" height="60%"></div>
             </div>
             <audio id="bubble-sound">
-                <source src="./audio/bubble_pop.mp3" type="audio/mpeg">
+                <source src="./audio/buuble_pop.mp3" type="audio/mpeg">
             </audio>              
 
         </div>
